version 0.1.0 (2014-12-23)
--------------------------
- First release